fix for horizontal scroll

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -504,7 +504,7 @@ body {
 .stop-scrolling {
     min-height: 100vh;
     height: auto;
-    width: 100vw;
+    //width: 100vw;
     // overflow: hidden;
     position: relative;
 
